@startuml
enum KernelSize {
    Small,
    Medium,
    Large,
    VeryLarge,
}
class KernelSizeParameter <<sealed>> {
}
class Dof <<sealed>> {
    + <<override>> IsEnabledAndSupported(context:PostProcessRenderContext) : bool
}
class DofRenderer <<sealed>> {
    + DofRenderer()
    + <<override>> GetCameraFlags() : DepthTextureMode
    + <<override>> Render(context:PostProcessRenderContext) : void
    + <<override>> Release() : void
}
class "ParameterOverride`1"<T> {
}
class "PostProcessEffectRenderer`1"<T> {
}
enum Pass {
    CoCCalculation,
    CoCTemporalFilter,
    DownsampleAndPrefilter,
    BokehSmallKernel,
    BokehMediumKernel,
    BokehLargeKernel,
    BokehVeryLargeKernel,
    PostFilter,
    Combine,
    DebugOverlay,
}
"ParameterOverride`1" "<KernelSize>" <|-- KernelSizeParameter
PostProcessEffectSettings <|-- Dof
Dof o-> "focusDistance" FloatParameter
Dof o-> "aperture" FloatParameter
Dof o-> "focalLength" FloatParameter
Dof o-> "kernelSize" KernelSizeParameter
"PostProcessEffectRenderer`1" "<Dof>" <|-- DofRenderer
DofRenderer +-- Pass
@enduml
